Update libs to work on java9 and clojure1.9